# lsport

./: .gitignore  LICENCE  README.md  lsport.bak.py  pyproject.toml  setup.py
lsport/: lsport.py
lsport.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
