[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lsport"
version = "0.1.1"
description = "CLI tool to list serial devices from"
authors = [
    { name="Tirtharaj Sinha", email="sinhatirtharaj@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "tabulate>=0.8.9"
]

[project.scripts]
lsport = "lsport.lsport:main"
